# coordinaut

./: .env.example  .gitignore  AGENT_TASKLIST.md  README.md  SPEC.md  launcher_templates.example.json
.claude/projects/-Users-jrand-git-repos-coordinaut/memory/: MEMORY.md  feedback_specs_first.md  project_repo_scoping.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: config.py  events.py  launcher.py  leases.py  messages.py  queue.py  repos.py  resources.py  sessions.py  tickets.py
backend/app/db/: engine.py
backend/app/integrations/: linear.py
backend/app/launcher/: service.py
backend/app/models/: __init__.py  app_config.py  base.py  lease.py  message.py  queue_entry.py  resource.py  session.py  status_update.py  ticket.py  workflow_event.py
backend/app/schemas/: config.py  event.py  launcher.py  lease.py  message.py  queue.py  resource.py  session.py  ticket.py
backend/app/services/: event_service.py  lease_service.py  message_service.py  queue_service.py  repo_service.py  resource_service.py  session_service.py  ticket_service.py
backend/coordinaut_cli/: client.py  main.py
docs/: decisions.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
frontend/src/components/: Dashboard.tsx  Events.tsx  Leases.tsx  Messages.tsx  Queue.tsx  Repos.tsx  Sessions.tsx  Tickets.tsx
tests/: conftest.py  test_leases.py  test_messages.py  test_queue.py  test_sessions.py
