[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coordinaut"
version = "0.1.0"
description = "Local-first coordination layer for autonomous coding workflows"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
    "eval_type_backport>=0.2.0;python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]
linear = [
    "httpx>=0.26.0",
]

[project.scripts]
coordinaut = "coordinaut_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app", "coordinaut_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["../tests"]
